# bucharest-scraper

./: .env.example  .gitignore  CAPTURE_COMPARISON.md  METHODOLOGY.md  pyproject.toml
config/: bucharest.yaml  scraping.yaml
docs/superpowers/plans/: 2026-05-21-location-precision-dedup-gps-fusion.md  2026-05-23-docs-rethink-research-grounded.md  2026-05-23-map-canonical-position-columns.md  2026-05-24-dedup-maxguests-amenities.md  2026-05-27-cross-platform-offset-and-sigma-calibration.md
docs/superpowers/specs/: 2026-05-21-location-precision-dedup-gps-fusion-design.md  2026-05-23-docs-rethink-research-grounded.md  2026-05-23-map-canonical-position-columns-design.md  2026-05-24-dedup-maxguests-amenities-design.md  2026-05-27-cross-platform-offset-and-sigma-calibration-design.md
src/: config.py  orchestrator.py  text.py
src/anti_detect/: delays.py  headers.py  proxy.py
src/dedup/: deduplicator.py  operators.py  property_groups.py  validate.py
src/geo/: calibration.py  curate.py  fusion.py  geocode.py  precision.py
src/grid/: bucharest.py  generator.py
src/models/: enums.py  listing.py
src/scrapers/: base.py  stats.py
src/scrapers/airbnb/: parser.py  scraper.py
src/storage/: database.py  exporter.py
src/visualization/: map_builder.py
tests/: conftest.py  test_airbnb_radius.py  test_calibration.py  test_config.py  test_curate.py  test_database_curation.py  test_exporter.py  test_fusion.py  test_geocode.py  test_map_builder.py  test_operators.py  test_precision.py  test_property_groups.py  test_smoke.py  test_validate.py
(+4 files in other folders)
